style.css
/* Font */
@font-face {
	font-family : 'raleway';
	src: url(/font/Raleway-VariableFont_wght.ttf),
		 url(/font/Raleway-Italic-VariableFont_wght.ttf);	 
}

body
{
  font-family: 'raleway';
  margin-left: 0em;
}

.largeur
{
  max-width: 1280px;
  min-width: 375px;
}

/* Menu de navigation */

.menu_navigation
{
  display: flex;
}

.inscription
{
  position: relative;
  left: 83%;
}

.hebergements_activites
{
  position: relative;
  left: 55%;
}

.highlight 
{
  margin-left: 2em;
}

.menu_navigation a
{
	text-decoration: none;
}

.couleur_nav
{
	color: #0065FC;
}

.menu_activites
{
  color: grey;
}

.logo_reservia
{
  width: 5em;
}

/* Header */

header h1
{
	font-size: 1.2em;
	font-weight: bold;
}

header h2
{
	font-size: 1em;
  font-weight: normal;
}

/* Formulaire */

form
{
	display: flex;
  align-items: center;
  justify-content: flex-start;
}

.logo_recherche
{
  display: flex;
  justify-content: center;
  align-items: center;
	border: solid 0.5px;
	height: 2em;
	width: 2em;
	border-radius: 10px 0px 0px 10px;
	background-color: #F2F2F2;
  border-color: #F2F2F2;
}

.champ
{
	height: 2.47em;
	border: solid 1px;
	border-top-color: #F2F2F2;
	border-bottom-color: #F2F2F2;
	border-right-color: white;
  border-left-color: white;
  font-family: 'raleway', sans-serif;
	font-weight: bold;
}

.bouton_rechercher
{
	border: 0px white;
	border-radius: 0em 0.8em 0.8em 0em;
	background-color: #0065FC;
	font-family: 'raleway', sans-serif;
	color: white;
	height: 2.45em;
  width: 7em;
  font-weight: bold;
}

.btn__rechercher--responsive
{
  display: none;
}

.no_display
{
  display: none;
}

/* Filtres */

.filtres_responsive
{
  display: flex;
}
.filtres
{
  display: flex;
  align-items: center;
}

.filtres_bouton
{
  display: flex;
  align-items: center;
  border: solid 2px #DEEBFF;
  border-radius: 2em;
  height: 2em;
  width: 10em;
  margin-right: 1em;
}

.background
{
  display: flex;
  align-items: center;
  justify-content: center;
  color: #0065FC;
  background-color: #DEEBFF;
  border-radius: 2em;
  height: 2em;
  width: 2.1em;
  margin-right: 0.5em;
}

.animaux
{
  width: 12em;
}

.familial
{
  width: 7em;
}

.filtres_bouton:hover
{
	background-color: #DEEBFF;
}

/* Quantité de logements disponibles dans la ville*/

.disponibilites
{
	display: flex;
  align-items: center;
  margin-bottom: 1em;
}

.centrage
{
	background-color: white;
	color: #0065FC;
	border: solid 2px #DEEBFF;
	border-radius: 50%;
	padding: 0.7em;
}

.titre_disponibilites
{
  font-size: 1.3em;
  font-weight: normal;
}

/* Bloc hebergements et populaires */
.bloc_hebergements_populaires
{
  display: flex;
}

/* Section Hébergements */
.hebergements_et_nomdeville
{
  background-color: #F2F2F2;
  border-radius: 1em 1em 1em 1em;
}

.ligne_hebergements
{
  display: flex;
  margin-left: 1em;
  margin-bottom: 2em;
  width: 97%; 
}

.carte_hebergements /* Fond blanc contenant les img + texte */
{
  background-color: white;
  width: 35%;
  margin-left: 1em;
  border-radius: 1.1em;
}

.carte_hebergements img
{
  object-fit: cover;
  width: 97%;
  height: 10em;
  border-radius: 1.1em 1.1em 0em 0em;
  margin-top: 0.2em; /* Centre l'image au milieu du bloc supp */
  margin-left: 0.3em;
}

.descriptif_chambre
{
  padding-left: 1em;
  margin-bottom: 0.7em;
}

.descriptif_chambre h2
{
  font-size: 1.2em;
  margin-bottom: -0.5em;
}

.descriptif_chambre p
{
  margin-bottom: 0em;
}

.etoiles
{
  color: #0065FC;
  font-size: 0.8em;
  margin-top: 0.5em;
}

.disabled
{
  color: grey;
}

.hebergements_et_nomdeville a
{
  text-decoration: none;
  color: black;
}

.bouton_afficher
{
  font-weight: bold;
  font-size: 1.4em;
}

/* Les plus populaires */

.les_populaires
{
  background-color: #F2F2F2;
  border-radius: 1em 1em 1em 1em;
  margin-left: 1em;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 115em;
}

.titre_populaires
{
  font-size: 1.5em;
  font-weight: bold;
  display: flex;
  justify-content: space-around;
}


.carte_populaires /* Fond blanc contenant les img + texte */
{
  background-color: white;
  border-radius: 1em;
  text-decoration: none;
  width: 90%;
  margin-left: 1em;
}

.carte_populaires a
{
  text-decoration: none;
  display: flex;
}

.carte_populaires img
{  
  width: 40%;
  border-radius: 1em 0em 0em 1em;
  height: 9em;
  object-fit: cover;
  padding-top: 0.2em;
  padding-left: 0.2em;
  padding-bottom: 0.2em;
}

.descriptif_populaires
{
  flex-direction: column;
	font-size: 0.7em;
  color: black;
  margin-left: 0.7em;
}

.descriptif_populaires p
{
  font-size: 1.2em;
}

.etoiles_populaires
{
  color: #0065FC;
  font-size: 1.2em;
  margin-top: 30%;
}

.etoiles_populaires--specifique
{
  color: #0065FC;
  font-size: 1.2em;
  margin-top: 20%; 
}

/* Activités à Marseille */


.activites_marseille
{
  display: flex;
  justify-content: space-between;
  height: 35em;
}

.carte_vieux_port
{
  background-color: white;
  width: 23%;
  border-radius: 1.5em;
  box-shadow: 0px 5px 5px #F2F2F2;
}

.carte_vieux_port img
{
  height: 85%;
  width: 100%;
  object-fit: cover;
  border-radius: 1.5em 1.5em 0em 0em;
}

.lien_activites
{
  text-decoration: none;

}

.nom_activites
{
  color: black;
  font-size: 1.3em;
  margin-left: 0.7em;
}

.colonne_2
{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 23%;
}

.carte_pomegues
{
  background-color: white;
  height: 49%;
  width: 100%;
  border-radius: 1.5em;
  box-shadow: 0px 5px 5px #F2F2F2;
}

.carte_pomegues img
{
  height: 75%;
  width: 100%;
  object-fit: cover;
  border-radius: 1.5em 1.5em 0em 0em;
}

.carte_frioul
{
  background-color: white;
  height: 40%;
  width: 100%;
  border-radius: 1.5em;
  box-shadow: 0px 5px 5px #F2F2F2; 
}

.carte_frioul img
{
  height: 70%;
  width: 100%;
  object-fit: cover;
  border-radius: 1.5em 1.5em 0em 0em;
}

.carte_calanques
{
  background-color: white;
  width: 23%;
  border-radius: 1.5em;
  box-shadow: 0px 5px 5px #F2F2F2; 
}

.carte_calanques img
{
  height: 80%;
  width: 100%;
  object-fit: cover;
  border-radius: 1.5em 1.5em 0em 0em;
}

.colonne_4
{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 23%;
}

.carte_notre_dame
{
  background-color: white;
  height: 40%;
  width: 92%;
  border-radius: 1.5em;
  box-shadow: 0px 5px 5px #F2F2F2;
}

.carte_notre_dame img
{
  height: 70%;
  width: 100%;
  object-fit: cover;
  border-radius: 1.5em 1.5em 0em 0em;
}

.carte_longchamp
{
  background-color: white;
  height: 45%;
  width: 92%;
  border-radius: 1.5em;
  box-shadow: 0px 5px 5px #F2F2F2;
}

.carte_longchamp img
{
  height: 75%;
  width: 100%;
  object-fit: cover;
  border-radius: 1.5em 1.5em 0em 0em;
}

/* Pied de page */

footer
{
	display: flex;
	justify-content: space-between;
  background-color: #F2F2F2;
}

footer section
{
	width: 33.33%;
}

.a_propos a
{
	display: flex;
	flex-direction: column;
	text-decoration: none;
	color: black;
	padding-bottom: 0.6em;
}

.nos_hebergements a
{
	display: flex;
	flex-direction: column;
	text-decoration: none;
	color: black;
	padding-bottom: 0.6em;
}

.assistance a
{
	display: flex;
	flex-direction: column;
	text-decoration: none;
	color: black;
	padding-bottom: 0.6em;
}

/* Reponsive Mobile */

@media screen and (max-width: 450px)
{
  .menu_navigation
  {
    display: block;
  }
  .link__logo
  {
    position: relative;
    left: 5%;
  }

  .inscription
  {
    position: relative;
    left: 50%;
    top: 2.5%;
  }

  .hebergements_activites
  {
    position: initial;
    left: initial;
    display: flex;
    margin: auto;
  }

  .hebergements_activites a
  {
    padding: 20px 25px 15px 60px;
  }

  .bouton_hebergements
  {
    border-bottom: solid 1px grey;
    width: 50%;
  }

  .menu_activites
  {
    border-bottom: solid 1px grey;
    width: 50%;
  }

  .highlight:hover
  {
    border-bottom: solid 2px #0065FC;
    padding-bottom: 0.8em;
  }

  .bouton_rechercher
  {
    display: none;
  }

  .bouton_rechercher--font
  {
    border: 0px white;
	  border-radius: 30%;
	  background-color: #0065FC;
	  color: white;
	  height: 2.45em;
    width: 3em;
  }

  .loupe 
  {
    margin-left: -1.7em;
    color: white;
  }

  .btn__rechercher--responsive
  {
    display: flex;
    align-items: center;
  }

  .filtres
  {
    flex-direction: column;
    align-items: flex-start;
  }

  .filtres_bouton
  {
    margin-bottom: 1em;
  }
  .bloc_hebergements_populaires
  {
    flex-direction: column-reverse;
  }

  .les_populaires
  {
    width: 100%;
    border-radius: 0px;
    margin-left: 0em;
  }

  .carte_populaires
  {
    width: 90%;
    margin-left: 1em;
    margin-bottom: 1em;
  }
  
  .hebergements_et_nomdeville
  {
    justify-content: flex-start;
    background-color: white;
    margin-bottom: 2em;
  }

  .hebergements_et_nomdeville h2
  {
    margin-left: 0.3em;
  }

  .ligne_hebergements
  {
    flex-direction: column;
    justify-content: flex-start;
    width: 95%;
    margin-bottom: 0em;
  }

  .carte_hebergements
  { 
    height: 25%;
    width: 100%;
    margin-bottom: 2em;
    box-shadow: 0px 5px 5px #F2F2F2;
    margin-left: 0em;
  }
  
  .activites_marseille
  {
    flex-direction: column;
    justify-content: space-around;
    height: initial;
  }

  .carte_vieux_port
  {
    width: 100%;
  }

  .carte_vieux_port img
  {
    height: 75%;
  }

  .carte_calanques img
  {
    height: 75%;
  }
  .responsive__mobile
  {
    height: 12em;
    width: 100%;
    margin-bottom: 1.5em;
  }

  .colonne_2
  {
    width: 100%;
  }

  .colonne_4
  {
    width: 100%;
  }

  .nom_activites
  {
    font-size: 1.1em;
  }

  footer
  {
    flex-direction: column;
    padding: 1em;
  }

  footer section
  {
    height: 35%;
    width: 100%;
  }
}

